fix: page home overflow issue

--- a/styles/mobile-styles.css
+++ b/styles/mobile-styles.css
@@ -47,8 +47,8 @@
         width: 90%;
         height: 100%;
         flex-direction: column;
+        justify-content: flex-start;
         align-items: center;
-        /* padding-right: .7rem; */
         overflow-y: scroll;
     }
     .page.home::-webkit-scrollbar {
